Membrane Service Proxy Change Log
=============================================================================

* [example] Added docker example which features a Dockerfile for Docker
  deployment of the latest release version.

* [upgrade] Upgraded from Spring 3.1.2 to 4.2.2

* [feature] Swagger Proxy
  This includes a "Swagger Rewriter Interceptor" and a new service Proxy type:
  the "Swagger Proxy". There's also an example for swagger.

* [feature] The admin console now has a "Auto Reload" checkbox in the 'Calls'
  tab. Calls are automatically refreshed while this checkbox is checked.

* [release] 4.1.0

* [feature] The admin console can now display 'inflight' exchanges, which have
  not completed yet (among all completed Exchanges on the 'Calls' tab).
  This can be used to inspect HTTP calls while they are going on.

* [documentation] Added the 'webserver-stomp' example to demonstrate using
  STOMP-over-WebSckets-over-SSL. This particular example demonstrates how
  to connect from a Web Browser to ActiveMQ via Membrane Service Proxy.

  Membrane Service Proxy is used to split the WebSocket from the remaining
  'normal' (non-WebSocket) HTTP traffic.

* [update] The wrapper.conf is updated to support the latest version (3.5.26)
  of the Tanuki Service Wrapper, which can be used to run Membrane Service
  Proxy as a service (e.g. on Windows or Linux).

* [feature] Automatically set the jdk.tls.ephemeralDHKeySize System property
  to 'matched', if not already set.
  On Java 8, this increases the key size for Diffie Hellman to match the size
  of the certificate used.

  Emit a warning, if the Java Cryptography Extension (JCE) Unlimited Strength
  Jurisdiction Policy Files are not installed.

* [update] to soa-model 1.5.4. This allows a Unicode byte order mark (BOM)
  to be present at the beginning of WSDLs, XML Schemas and SOAP messages.

* [feature] The admin console can now display 'stream pump' traffic
  statistics for proxy, WebSocket and STOMP connections.